--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,33 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+#container {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#container #frame {
+  width: 600px;
+  height: 600px;
+  position: relative;
+}
+#container #frame #frame-image {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 500px;
+  transition: 1s;
+}
+#container #frame #frame-image .image {
+  width: 0px;
+  position: absolute;
 }
 
 /*# sourceMappingURL=style.css.map */
