--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,4 +1,43 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+#container  {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    #frame {
+        width: 600px;
+        height: 600px;
+        // border: 3px solid black;
+        position: relative;
+    
+
+        #frame-image {
+
+            position: relative;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            height: 500px;
+            transition: 1s;
+            // border: 3px solid red;
+            .image {
+                width: 0px;
+                // height: 400px;
+                position: absolute;
+                // display: none;
+            
+              
+            }
+        }
+
+     
+    }
 }
